<!--
 * Copyright (C) 2013, 2014 Michał Niedźwiecki
 * 
 * This file is a part of GeoKrety Logger
 * http://geokretylog.sourceforge.net/
 * 
 * GeoKrety Logger is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 * 
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 * or see <http://www.gnu.org/licenses/>
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true" >

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveClick"
            android:text="@string/user_button_save" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttons" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_label_portals" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gkCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_checkbox_portal_gk" />

            <CheckBox
                android:id="@+id/ocCheckBox0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/user_checkbox_portal_oc0" />

            <CheckBox
                android:id="@+id/ocCheckBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_checkbox_portal_oc1" />

            <CheckBox
                android:id="@+id/ocCheckBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_checkbox_portal_oc2" />

            <CheckBox
                android:id="@+id/ocCheckBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_checkbox_portal_oc3" />

            <CheckBox
                android:id="@+id/ocCheckBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_checkbox_portal_oc4" />
            
            <CheckBox
                android:id="@+id/gcCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_checkbox_portal_gc"
                android:visibility="gone" />
            <!-- 
            <EditText
                    android:id="@+id/gcLoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:hint="@string/gclogin_hint"
                    android:visibility="gone" />

            <EditText
                    android:id="@+id/gcPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:hint="@string/gcpassword_hint"
                    android:visibility="gone" />
             -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_label_home_location" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/latEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/user_hint_latitude" >
                </EditText>

                <EditText
                    android:id="@+id/lonEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/user_hint_longnitude" />
<!-- 
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible" />
 -->
                <ImageButton
                    android:id="@+id/gpsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/user_button_from_gps"
                    android:onClick="onClickSetCoordinatesFromGPS"
                    android:src="@drawable/ic_menu_mylocation" />
            </LinearLayout>
            
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
            		android:linksClickable="true"
                    android:text="@string/gps_label_supported_formats" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/user_label_private_policy" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>